[project]
name = "structural-explainability-site"
version = "0.0.0"
description = "Organization website for Structural Explainability"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Structural Explainability", email = "info@structuralexplainability.org" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pre-commit",
  "validate-pyproject",
]
docs = [
  "mike",
  "mkdocs",
  "mkdocs-gen-files",
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-include-markdown-plugin",
  "mkdocs-literate-nav",
  "mkdocs-material",
  "mkdocs-static-i18n",
  "mkdocstrings[python]",
  "pymdown-extensions",
  "ruff",
]

[project.urls]
"Home" = "https://structural-explainability.github.io/site/"
"Repo" = "https://github.com/structural-explainability/site"
"Issues" = "https://github.com/structural-explainability/site/issues"

[tool.uv]
package = false
